# citerag

./: .env.example  .gitignore  CLAUDE.md  README.md  architecture-viz.html  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1e5f79a587b4_initial_schema.py  5e87d7a46aff_initial_schema.py  e32966e92e10_initial_schema.py
app/: main.py
app/api/: feedback.py  jobs.py  query.py  upload.py
app/core/: config.py  database.py  dependencies.py  models.py  schemas.py
app/evaluation/: llm_judge.py  ragas_eval.py  test_queries.py
app/generation/: llm_client.py  prompt_builder.py  stream_handler.py
app/ingestion/: chunker.py  embedder.py  indexer.py  parser.py  worker.py
app/retrieval/: hybrid_search.py  query_expander.py  reranker.py  retriever.py
scripts/: benchmark_latency.py  run_eval.py  seed_test_data.py
tests/: conftest.py  test_chunker.py  test_evaluation.py  test_query.py  test_retrieval.py  test_upload.py
