[project]
name = "citerag"
version = "0.1.0"
description = "Production-Grade RAG Document System"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "qdrant-client>=1.13.0",
    "redis>=5.2.0",
    "celery>=5.3,<6.0",
    "unstructured[pdf]>=0.16.0",
    "python-magic>=0.4.27",
    "sentence-transformers>=3.4.0",
    "openai>=1.65.0",
    "httpx>=0.28.0",
    "structlog>=25.1.0",
    "ragas>=0.2.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "locust>=2.33.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "tiktoken>=0.9.0",
    "qdrant-client>=1.12.0",
    "pymupdf>=1.27.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "locust>=2.33.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "locust>=2.33.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
